k8s/services/api-gateway/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: ecommerce-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      serviceAccountName: microservice-sa
      containers:
      - name: api-gateway
        image: selimhorri/api-gateway-ecommerce-boot:0.1.0
        ports:
        - containerPort: 8080
